--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body{
+    background-image: url(img/bg.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100%;
+    background-position: center;
+}
+
 .navbar-brand{
     width: 250px;
 }
@@ -12,19 +21,16 @@
     font-size: 40px;
 }
 
-.row{
-    display: inline-block;
-    flex-flow: row;
-}
-
 section#left{
     width: 50%;
-        float: left;
+    float: left;
+    padding: 15px;
 }
 
 aside#right {
     width: 50%;
     float: right;
+    padding: 15px;
 }
 
 .center{
@@ -36,6 +42,11 @@ aside#right {
 }
 
 .flex-container{
+    margin-bottom: 20px;
+}
+
+.flex-container1{
+    padding-left: 20px;
 }
 
 .container{
@@ -51,15 +62,153 @@ aside#right {
     text-align: center;
 }
 
+.sub-title{
+    font-size: 30px;
+}
+
 .carousel-caption{
     background-color: rgba(0, 0, 0, 0.2);
 }
 
 .carousel-item{
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
 .item{
     width: 100px;
     height: auto;
+}
+
+.genre-carousel{
+    width: 69%;
+    height: auto;
+    display: flexbox;
+    padding: 15px 20px 15px 20px;
+    background-color: azure;
+    margin-right: 5px;
+}
+
+.popular{
+    width: 30%;
+    height: auto;
+    float: right;
+    box-sizing: border-box;
+    background-color:mediumaquamarine;
+    margin-left: 5px;
+}
+
+.container2{
+    margin-top: 35px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
+    padding: 0 25px 0 25px;
+}
+
+.row1{
+    flex-flow: row;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+
+.row2{
+    flex-flow: row;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: honeydew;
+    color: firebrick;
+}
+
+.container-fluid1{
+    display: flex;
+    display: block;
+}
+
+.img{
+    width: 150px;
+}
+
+.text{
+    width: auto;
+    padding-left: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 15px;
+    align-content: center;
+}
+
+.pop {
+    height: 210px;
+    width: 150px;
+}
+
+.trend{
+    font-size: 35px;
+    padding: 15px 10px 0 10px;
+    margin: 0%;
+}
+
+.genre{
+    font-size: 35px;
+}
+
+.container3{
+    max-width: 1350px;
+    width: 100%;
+    padding: 20px;
+    background-color: khaki;
+    float: left;
+    margin: 0 93px;
+}
+
+.alphabet-list{
+    float: left;
+    width: 100%;
+}
+
+.alp-list{
+    text-align: center;
+    line-height: normal;
+    list-style: none;
+    float: left;
+}
+
+.alp{
+    text-decoration: none;
+    padding: 3px 0;
+    text-align: center;
+    font-size: 18px;
+    color: black;
+    background-color: skyblue ;
+    margin: 20px 8px;
+    width: 30px;
+    display: block;
+    align-content: center;
+}
+
+.anime-list{
+    padding-bottom: 15px;
+    width: 100%;
+    float: left;
+}
+
+.letter{
+    margin-bottom: 20px;
+    float: left;
+    width: 100%;
+}
+
+.group{
+    text-decoration: none;
+    color: black;
+}
+
+.ani-list{
+    line-height: normal;
+    list-style: none;
+    font-size: 18px;
+    float: left;
+    width: 49%;
+    margin-right: 12px;
 }
