--- a/style.css
+++ b/style.css
@@ -11,26 +11,8 @@ body{
     width: 250px;
 }
 
-.logo{
-    padding: 0 10px 0 10px;
-    height: auto;
-    width: 120px;
-}
-
 #text{
     font-size: 40px;
-}
-
-section#left{
-    width: 50%;
-    float: left;
-    padding: 15px;
-}
-
-aside#right {
-    width: 50%;
-    float: right;
-    padding: 15px;
 }
 
 .center{
@@ -49,12 +31,8 @@ aside#right {
     padding-left: 20px;
 }
 
-.container{
-    margin-top: 30px;
-}
-
 .title{
-    color: chartreuse;
+    color: powderblue;
     background-color: black;
     margin-bottom: 0px;
     padding: 10px;
@@ -67,7 +45,12 @@ aside#right {
 }
 
 .carousel-caption{
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.caption{
+    color: chartreuse;
+    font-weight: bolder;
 }
 
 .carousel-item{
@@ -98,11 +81,30 @@ aside#right {
 }
 
 .container2{
-    margin-top: 35px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 960px;
-    padding: 0 25px 0 25px;
+    max-width: 1180px;
+    padding: 0 30px;
+    background-color: honeydew;
+    color: firebrick;
+}
+
+.center-link{
+    padding: 25px 0;
+    margin-left: 330px;
+    margin-right: 330px;
+}
+
+section#left {
+    width: 50%;
+    float: left;
+    padding: 0 5px;
+}
+
+aside#right {
+    width: 50%;
+    float: left;
+    padding: 0 5px;
 }
 
 .row1{
@@ -110,14 +112,6 @@ aside#right {
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
-}
-
-.row2{
-    flex-flow: row;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: honeydew;
-    color: firebrick;
 }
 
 .container-fluid1{
@@ -138,7 +132,7 @@ aside#right {
     align-content: center;
 }
 
-.pop {
+.pop{
     height: 210px;
     width: 150px;
 }
@@ -181,7 +175,7 @@ aside#right {
     font-size: 18px;
     color: black;
     background-color: skyblue ;
-    margin: 20px 8px;
+    margin: 12px 8px 20px;
     width: 30px;
     display: block;
     align-content: center;
@@ -202,13 +196,53 @@ aside#right {
 .group{
     text-decoration: none;
     color: black;
+    margin-left: 32px;
+    margin-top: 10px;
 }
 
 .ani-list{
     line-height: normal;
     list-style: none;
-    font-size: 18px;
+    font-size: 16px;
     float: left;
     width: 49%;
-    margin-right: 12px;
+    margin: 2px 10px 2px 2px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.movie-item{
+    list-style: none;
+    flex-direction: row;
+    float: left;
+    margin: 10px;
+    position: relative;
+    width: 220px;
+    height: 420px;
+    border: 5px sienna;
+    word-wrap: break-word;
+}
+
+.movie-name{
+    overflow: hidden;
+    text-align: center;
+    word-wrap: break-word;
+    height: 48px;
+    margin-top: 10px;
+    margin-bottom: 0;
+    color: ivory;
+}
+
+.movie-year{
+    text-align: center;
+    margin: 0;
+    color: ghostwhite;
+}
+
+.container4{
+    background-color: rgba(0, 206, 209, 0.6);
+    float: left;
+    margin: auto; 
+    width: 100%;
+    padding: 40px;
 }
