--- a/style.css
+++ b/style.css
@@ -7,28 +7,12 @@ body{
     background-position: center;
 }
 
-.navbar-brand{
-    width: 250px;
-}
-
-#text{
-    font-size: 60px;
-}
-
 .center{
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 655px;
     width: auto;
-}
-
-.flex-container{
-    margin-bottom: 20px;
-}
-
-.flex-container1{
-    padding-left: 20px;
 }
 
 .title{
@@ -74,8 +58,8 @@ body{
     margin-right: auto;
     max-width: 1200px;
     padding: 0 30px;
-    background-color: rgba(240, 255, 240, 0.9);
-    color: firebrick;
+    background-color: rgba(255, 255, 0, 0.95);
+    color: fuchsia;
 }
 
 .center-link{
@@ -109,7 +93,7 @@ aside#right {
     max-width: 88%;
     width: 100%;
     padding: 20px;
-    background-color: khaki;
+    background-color: rgba(127, 255, 212, 0.95);
     display: table;
     margin-left: auto;
     margin-right: auto;
